--- a/The-Best-Todo-App-master/cloudbuild.yaml
+++ b/The-Best-Todo-App-master/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
     args: [
       'build',
       '-t',
-      'us-central1-docker.pkg.dev/watchful-net-455704-i0/todo-repo/todo-app',
+      'us-central1-docker.pkg.dev/watchful-net-455704-i0/kub-java/todo-app',
       '.'
     ]
 
@@ -14,8 +14,9 @@ steps:
     id: Push
     args: [
       'push',
-      'us-central1-docker.pkg.dev/watchful-net-455704-i0/todo-repo/todo-app'
+      'us-central1-docker.pkg.dev/watchful-net-455704-i0/kub-java/todo-app'
     ]
 
 images:
-  - 'us-central1-docker.pkg.dev/watchful-net-455704-i0/todo-repo/todo-app'
+  - us-central1-docker.pkg.dev/your-gcp-project/todo-repo/todo-app
+
