--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,19 +1,20 @@
 steps:
-  # Step 1: Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
     id: Build
-    args:
-      - build
-      - -t
-      - us-central1-docker.pkg.dev/watchful-net-455704-i0/kub-java/kub-java
-      - .
+    dir: The-Best-Todo-App-master
+    args: [
+      'build',
+      '-t',
+      'us-central1-docker.pkg.dev/watchful-net-455704-i0/kub-java/kub-java',
+      '.'
+    ]
 
-  # Step 2: Push Docker image
   - name: 'gcr.io/cloud-builders/docker'
     id: Push
-    args:
-      - push
-      - us-central1-docker.pkg.dev/watchful-net-455704-i0/kub-java/kub-java
+    args: [
+      'push',
+      'us-central1-docker.pkg.dev/watchful-net-455704-i0/kub-java/kub-java'
+    ]
 
 images:
   - us-central1-docker.pkg.dev/watchful-net-455704-i0/kub-java/kub-java
@@ -23,4 +24,4 @@ logsBucket: gs://build-logs-watchful/
 options:
   logging: GCS_ONLY
 
-serviceAccount: '123456789012@cloudbuild.gserviceaccount.com'
+serviceAccount: '1093121357596@cloudbuild.gserviceaccount.com'
