--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
     ]
 
 images:
-  - us-central1-docker.pkg.dev/inductive-gift-456306-h4/kub-java/kub-java
+  - 'us-central1-docker.pkg.dev/inductive-gift-456306-h4/kub-java/kub-java'
 
 logsBucket: gs://build-logs-watchful-1/
 
